--- a/src/main/resources/templates/thymeleaf/header_menu.html
+++ b/src/main/resources/templates/thymeleaf/header_menu.html
@@ -1,8 +1,8 @@
-	<html lagn="ko" 
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	
-	<div th:fragment="headerFragment">
+<html lang="ko" 
+     xmlns:th="http://www.thymeleaf.org"
+     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<div th:fragment="headerFragment">
 	
 
 <!DOCTYPE html>
@@ -20,7 +20,7 @@
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link type="text/css"rel="stylesheet" href="resources/css/common_pc.css">
+	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css">
 	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
 	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
 	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
@@ -73,7 +73,19 @@
 				
 			</div>
 		</div>
-		
+		<div class="bab-bo">
+			<div class="ta-sho">
+				<a href="#"><span>Guide</span></a>
+			</div>
+			<div class="mab-rb">
+				<a href="#" class="mab-a"><span>Guide</span></a>
+				<ul class="mab-ul">
+					<li><a href="#"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li>
+					<li><a href="#"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
+					<li><a href="#"><img src="resources/img/icon-6.png" /> <span>작품등록</span></a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 		
 <!-- 모달검색 -->
