--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -2,27 +2,6 @@
 <html lang="ko">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="theme-color" content="#000000">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>딜링아트</title>
-	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css">
-	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
-	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
-
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     </style>
@@ -30,60 +9,7 @@
 
 <body>
 	<div class="wrap">
-		<div class="head-wrap">
-			<div class="head">
-				<div class="h-logo"><a href="#"><img src="resources/img/logo.png" /></a></div>
-				<div class="h-gnb">
-					<div class="navbox">
-						<nav>
-							<li><a href="#">Deal</a></li>
-							<li><a href="#">Megazine</a></li>
-							<li><a href="#">Artist Library</a></li>
-							<li><a href="#">About</a></li>
-						</nav>
-					</div>
-					
-					<!-- 로그인전 -->
-					<div class="login-hide h-text"  style="display:none;">
-						<span>LOGIN</span>
-						<span>JOIN</span>
-					</div>
-					
-					<!-- 로그인후 -->
-					<div class="login-show h-img">
-						<span class="sog-1"><a href="#"><img src="resources/img/icon-1.png" /></a></span>
-						<span class="sog-2 lg-my"><a href="#"><img src="resources/img/icon-2.png" /></a></span>
-						<div class="s-hov">
-							<ul>
-								<li><a href="#"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
-							</ul>
-							<button type="button" class="btn-1">로그아웃</button>
-						</div>
-					</div>
-					
-					<!-- 검색 -->
-					<a href="" class="icon-search" data-toggle="modal" data-target="#myModal"><img src="resources/img/icon-3.png"></a>
-					
-				</div>
-			</div>
-			<div class="bab-bo">
-				<div class="ta-sho">
-					<a href="#"><span>Guide</span></a>
-				</div>
-				<div class="mab-rb">
-					<a href="#" class="mab-a"><span>Guide</span></a>
-					<ul class="mab-ul">
-						<li><a href="#"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li>
-						<li><a href="#"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
-						<li><a href="#"><img src="resources/img/icon-6.png" /> <span>작품등록</span></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+		<th:block th:replace="thymeleaf/header_menu :: headerFragment"></th:block>  
 		
 		<div class="body-wrap">
 			<div class="contents">
@@ -105,10 +31,10 @@
 								</div>
 								<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 									<div class="panel-body">
-										<input type="radio" id="r1" name="rr" />
-										<label for="r1"><span></span>Collector</label><br/>
-										<input type="radio" id="r2" name="rr" />
-										<label for="r2"><span></span> Artist</label>
+										<input type="radio" id="r3" name="authSq" value="1" class="searchOption" onclick="dealSearch()"/>
+										<label for="r3"><span></span>Collector</label><br/>
+										<input type="radio" id="r4" name="authSq" value="2" class="searchOption" onclick="dealSearch()"/>
+										<label for="r4"><span></span>Artist</label>
 									</div>
 								</div>
 							</div>
@@ -122,13 +48,13 @@
 								</div>
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
-										<input type="checkbox" id="a1" name="cc" />
+										<input type="checkbox" id="a1" name="dealSttsCd" value="IP" class="searchOption" onclick="dealSearch()"/>
 										<label for="a1"><span></span>진행 중인 거래</label><br/>
-										<input type="checkbox" id="a2" name="cc" />
+										<input type="checkbox" id="a2" name="dealSttsCd" value="EN" class="searchOption" onclick="dealSearch()"/>
 										<label for="a2"><span></span>종료된 거래</label><br/>
-										<input type="checkbox" id="a3" name="cc" />
+										<input type="checkbox" id="a3" name="dealTypCd" value="AUCT" class="searchOption" onclick="dealSearch()"/>
 										<label for="a3"><span></span>경매</label><br/>
-										<input type="checkbox" id="a4" name="cc" />
+										<input type="checkbox" id="a4" name="dealTypCd" value="SALE" class="searchOption" onclick="dealSearch()"/>
 										<label for="a4"><span></span>정찰가</label>
 									</div>
 								</div>
@@ -143,11 +69,11 @@
 								</div>
 								<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading3">
 									<div class="panel-body">
-										<input type="checkbox" id="b1" name="cc" />
+										<input type="checkbox" id="b1" name="workShpCd" value="PLN" class="searchOption" onclick="dealSearch()"/>
 										<label for="b1"><span></span>평면</label><br/>
-										<input type="checkbox" id="b2" name="cc" />
+										<input type="checkbox" id="b2" name="workShpCd" value="SLD" class="searchOption" onclick="dealSearch()"/>
 										<label for="b2"><span></span>입체</label><br/>
-										<input type="checkbox" id="b3" name="cc" />
+										<input type="checkbox" id="b3" name="workShpCd" value="NFT" class="searchOption" onclick="dealSearch()"/>
 										<label for="b3"><span></span>NFT</label>
 									</div>
 								</div>
@@ -162,15 +88,15 @@
 								</div>
 								<div id="collapse4" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading4">
 									<div class="panel-body">
-										<input type="checkbox" id="c1" name="cc" />
+										<input type="checkbox" id="c1" name="workClsfcCd" value="ORNTPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c1"><span></span>동양화</label><br/>
-										<input type="checkbox" id="c2" name="cc" />
+										<input type="checkbox" id="c2" name="workClsfcCd" value="WSTNPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c2"><span></span>서양화</label><br/>
-										<input type="checkbox" id="c3" name="cc" />
+										<input type="checkbox" id="c3" name="workClsfcCd" value="POPART" class="searchOption" onclick="dealSearch()"/>
 										<label for="c3"><span></span>팝아트</label>
-										<input type="checkbox" id="c4" name="cc" />
+										<input type="checkbox" id="c4" name="workClsfcCd" value="MDRNART" class="searchOption" onclick="dealSearch()"/>
 										<label for="c4"><span></span>현대미술</label><br/>
-										<input type="checkbox" id="c5" name="cc" />
+										<input type="checkbox" id="c5" name="workClsfcCd" value="ANTQART" class="searchOption" onclick="dealSearch()"/>
 										<label for="c5"><span></span>고미술</label>
 									</div>
 								</div>
@@ -204,7 +130,7 @@
 								</div>
 							</div>
 						</div>
-						<button type="button" class="btn-more2"><span>reset</span></button>
+						<button type="button" class="btn-more2" onclick="searchOptionReset()"><span>reset</span></button>
 					</div>
 					
 					<div class="con-right">
@@ -280,10 +206,10 @@
 													<span>Deal wtith</span>
 												</div>
 												<div class="drop-body">
-													<input type="radio" id="m1" name="rr" />
-													<label for="m1"><span></span>Collector</label><br/>
-													<input type="radio" id="m2" name="rr" />
-													<label for="m2"><span></span> Artist</label>
+													<input type="radio" id="m3" name="authSq" value="1" class="searchOption"/>
+													<label for="m3"><span></span>Collector</label><br/>
+													<input type="radio" id="m4" name="authSq" value="2" class="searchOption"/>
+													<label for="m4"><span></span>Artist</label>
 												</div>
 											</li>
 											<li role="presentation">
@@ -291,13 +217,13 @@
 													<span>거래</span>
 												</div>
 												<div class="drop-body">
-													<input type="checkbox" id="p1" name="cc" />
+													<input type="checkbox" id="p1" name="dealSttsCd" value="IP" class="searchOption"/>
 													<label for="p1"><span></span>진행 중인 거래</label><br/>
-													<input type="checkbox" id="p2" name="cc" />
+													<input type="checkbox" id="p2" name="dealSttsCd" value="EN" class="searchOption"/>
 													<label for="p2"><span></span>종료된 거래</label><br/>
-													<input type="checkbox" id="p3" name="cc" />
+													<input type="checkbox" id="p3" name="dealTypCd" value="AUCT" class="searchOption"/>
 													<label for="p3"><span></span>경매</label><br/>
-													<input type="checkbox" id="p4" name="cc" />
+													<input type="checkbox" id="p4" name="dealTypCd" value="SALE" class="searchOption"/>
 													<label for="p4"><span></span>정찰가</label>
 												</div>
 											</li>
@@ -306,11 +232,11 @@
 													<span>형태</span>
 												</div>
 												<div class="drop-body">
-													<input type="checkbox" id="o1" name="cc" />
+													<input type="checkbox" id="o1" name="workShpCd" value="PLN" class="searchOption"/>
 													<label for="o1"><span></span>평면</label><br/>
-													<input type="checkbox" id="o2" name="cc" />
+													<input type="checkbox" id="o2" name="workShpCd" value="SLD" class="searchOption"/>
 													<label for="o2"><span></span>입체</label><br/>
-													<input type="checkbox" id="o3" name="cc" />
+													<input type="checkbox" id="o3" name="workShpCd" value="NFT" class="searchOption"/>
 													<label for="o3"><span></span>NFT</label>
 												</div>
 											</li>
@@ -319,15 +245,15 @@
 													<span>분류</span>
 												</div>
 												<div class="drop-body">
-													<input type="checkbox" id="i1" name="cc" />
+													<input type="checkbox" id="i1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
 													<label for="i1"><span></span>동양화</label><br/>
-													<input type="checkbox" id="i2" name="cc" />
+													<input type="checkbox" id="i2" name="workClsfcCd" value="WSTNPAI" class="searchOption"/>
 													<label for="i2"><span></span>서양화</label><br/>
-													<input type="checkbox" id="i3" name="cc" />
+													<input type="checkbox" id="i3" name="workClsfcCd" value="POPART" class="searchOption"/>
 													<label for="i3"><span></span>팝아트</label><br/>
-													<input type="checkbox" id="i4" name="cc" />
+													<input type="checkbox" id="i4" name="workClsfcCd" value="MDRNART" class="searchOption"/>
 													<label for="i4"><span></span>현대미술</label><br/>
-													<input type="checkbox" id="i5" name="cc" />
+													<input type="checkbox" id="i5" name="workClsfcCd" value="ANTQART" class="searchOption"/>
 													<label for="i5"><span></span>고미술</label>
 												</div>
 											</li>
@@ -348,8 +274,8 @@
 												</div>
 											</li>
 											<div class="drop-btnb">
-												<button type="button" class="dbtn-1">선택</button>
-												<button type="button" class="dbtn-2">rereset</button>
+												<button type="button" class="dbtn-1" onclick="dealSearch()">선택</button>
+												<button type="button" class="dbtn-2" onclick="searchOptionReset()">reset</button>
 											</div>
 										</ul>
 									</div>
@@ -566,16 +492,13 @@
 	</div>
 
 <!-- 모달검색 -->
-
-
-
 <div class="modal fade modal-s" id="paintModal" tabindex="-1" role="dialog" aria-labelledby="paintModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-sech2">
 		<div class="modal-content">
 			<div class="modal-body">
 				<div class="modal-bs">
-					<div class="mb-img-1"><a href="#" alt="작가 본인 선택"></a></div>
-					<div class="mb-img-2"><a href="#" alt="소장중인 작품"></a></div>
+					<div class="mb-img-1"><a href="/dealConfirmed" alt="작가 본인 선택"></a></div>
+					<div class="mb-img-2"><a href="/dealConfirmed" alt="소장중인 작품"></a></div>
 					<a href="#" class="mb-a" data-dismiss="modal" aria-label="Close"><img src="resources/img/de/end-btn.png" /></a>
 				</div>
 			</div>
@@ -583,70 +506,6 @@
 	</div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade modal-s" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-sech">
-		<div class="modal-content">
-			<div class="modal-header">
-				<div class="conts">
-				    <div class="close" data-dismiss="modal" aria-label="Close"></div>
-				</div>
-
-			</div>
-			<div class="modal-body">				
-				<!-- 검색버튼 클릭시 -->
-				<div class="search-show">
-					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
-						
-						<div class="sea-won">
-							<!-- <div class="select-box">
-								<select>
-									<option>작가명</option>
-								</select>
-							</div> -->
-							<input type="text" class="" />
-							<a href="#"><img src="resources/img/icon-2.jpg" /></a>
-						</div>
-						<div class="ta-h3">
-							<h3 class="sea-h3">작품</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-						<div class="ta-h3">
-							<h3 class="sea-h3">작가</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-						<div class="ta-h3">
-							<h3 class="sea-h3">컨텐츠</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<!-- Modal -->
 <div class="modal fade modal-s" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModal1Label" aria-hidden="true">
 	<div class="modal-dialog modal-sech3">
 		<div class="modal-content">
@@ -672,13 +531,13 @@
 							<span>Deal wtith</span>
 						</div>
 						<div class="drop-body">
-							<div class="db-div">
-								<input type="radio" id="s1" name="ss" />
-								<label for="s1"><span></span>Collector</label>
+						<div class="db-div">
+								<input type="radio" id="s5" name ="authSq" value="1" class="searchOption"/>
+								<label for="s5"><span></span>Collector</label>
 							</div>
 							<div class="db-div">
-								<input type="radio" id="s2" name="ss" />
-								<label for="s2"><span></span> Artist</label>
+								<input type="radio" id="s6" name="authSq" value="2" class="searchOption"/>
+								<label for="s6"><span></span>Artist</label>
 							</div>
 						</div>
 					</li>
@@ -686,21 +545,22 @@
 						<div class="drop-title">
 							<span>거래</span>
 						</div>
+						
 						<div class="drop-body">
 							<div class="db-div">
-								<input type="checkbox" id="z1" name="cc" />
+								<input type="checkbox" id="z1" name="dealSttsCd" value="IP" class="searchOption"/>
 								<label for="z1"><span></span>진행 중인 거래</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="z2" name="cc" />
+								<input type="checkbox" id="z2" name="dealSttsCd" value="EN" class="searchOption"/>
 								<label for="z2"><span></span>종료된 거래</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="z3" name="cc" />
+								<input type="checkbox" id="z3" name="dealTypCd" value="AUCT" class="searchOption"/>
 								<label for="z3"><span></span>경매</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="z4" name="cc" />
+								<input type="checkbox" id="z4" name="dealTypCd" value="SALE" class="searchOption"/>
 								<label for="z4"><span></span>정찰가</label>
 							</div>
 						</div>
@@ -711,15 +571,15 @@
 						</div>
 						<div class="drop-body">
 							<div class="db-div">
-								<input type="checkbox" id="x1" name="cc" />
+								<input type="checkbox" id="x1" name="workShpCd" value="PLN" class="searchOption"/>
 								<label for="x1"><span></span>평면</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="x2" name="cc" />
+								<input type="checkbox" id="x2" name="workShpCd" value="SLD" class="searchOption"/>
 								<label for="x2"><span></span>입체</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="x3" name="cc" />
+								<input type="checkbox" id="x3" name="workShpCd" value="NFT" class="searchOption"/>
 								<label for="x3"><span></span>NFT</label>
 							</div>
 						</div>
@@ -730,23 +590,23 @@
 						</div>
 						<div class="drop-body">
 							<div class="db-div">
-								<input type="checkbox" id="v1" name="cc" />
+								<input type="checkbox" id="v1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
 								<label for="v1"><span></span>동양화</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="v2" name="cc" />
+								<input type="checkbox" id="v2" name="workClsfcCd" value="WSTNPAI" class="searchOption"/>
 								<label for="v2"><span></span>서양화</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="v3" name="cc" />
+								<input type="checkbox" id="v3" name="workClsfcCd" value="POPART" class="searchOption"/>
 								<label for="v3"><span></span>팝아트</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="v4" name="cc" />
+								<input type="checkbox" id="v4" name="workClsfcCd" value="MDRNART" class="searchOption"/>
 								<label for="v4"><span></span>현대미술</label>
 							</div>
 							<div class="db-div">
-								<input type="checkbox" id="v5" name="cc" />
+								<input type="checkbox" id="v5" name="workClsfcCd" value="ANTQART" class="searchOption"/>
 								<label for="v5"><span></span>고미술</label>
 							</div>
 						</div>
@@ -768,8 +628,8 @@
 						</div>
 					</li>
 					<div class="drop-btnb">
-						<button type="button" class="dbtn-1">선택</button>
-						<button type="button" class="dbtn-2">rereset</button>
+						<button type="button" class="dbtn-1" onclick="dealSearch()">선택</button>
+						<button type="button" class="dbtn-2" onclick="searchOptionReset()">reset</button>
 					</div>
 				</ul>
 			</div>
