--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -1,3 +1,7 @@
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	
+<div th:fragment="footerFragment">
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -69,3 +73,5 @@
 	</div>
 </body>
 </html>
+
+</div>
