--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -1,3 +1,8 @@
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	
+<div th:fragment="headerFragment">
+	
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -727,3 +732,6 @@ function isEmpty(str){
 
 </body>
 </html>
+
+    
+ </div>
