--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -1,14 +1,58 @@
-
 <!DOCTYPE HTML>
-<html lang="ko">
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	 <th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  
+	<!-- <th:block th:replace="templates/thymeleaf/headerFragment :: headerFragment" ></th:block> -->
 </head>
-
 
 <body>
 	<div class="wrap">
-		<th:block th:replace="thymeleaf/header_menu :: headerFragment"></th:block>  
+		<div class="head-wrap">
+			<div class="head">
+				<div class="h-logo"><a href="#"><img src="resources/img/logo.png" /></a></div>
+				<div class="h-gnb">
+					<div class="navbox">
+						<nav>
+							<li><a href="#">Deal</a></li>
+							<li><a href="#">Megazine</a></li>
+							<li><a href="#">Artist Library</a></li>
+							<li><a href="#">About</a></li>
+						</nav>
+					</div>
+					
+					<!-- 로그인전 -->
+					<div class="login-hide h-text" >
+						<span data-toggle="modal" data-target="#loginModal">LOGIN</span>
+						<span data-toggle="modal" data-target="#memberModal">JOIN</span>
+					</div>
+					
+					<!-- 로그인후 -->
+					<div class="login-show h-img" style="display:none;">
+						<span class="sog-1"><a href="#"><img src="resources/img/icon-1.png" /></a></span>
+						<span class="sog-2 lg-my"><a href="#"><img src="resources/img/icon-2.png" /></a></span>
+						<div class="s-hov">
+							<ul>
+					 			<li><a href="#"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
+								<li><a href="#"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
+								<li><a href="#"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
+								<li><a href="#"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
+								<li><a href="#"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
+							</ul>
+							<button type="button" class="btn-1">로그아웃</button>
+						</div>
+					</div>
+					
+					<!-- 검색 -->
+					<a href="" class="icon-search" data-toggle="modal" data-target="#myModal"><img src="resources/img/icon-3.png"></a>
+					
+					
+				</div>
+			</div>
+			
+		</div>
+		
+		<div class="body-wrap">
 		
 			<!-- 메인 배너 -->
 			<div class="contents">
@@ -318,26 +362,37 @@
 				</div>
 			</div>
 			
-			  <style type="text/css">
-				.columns-wrap {
-					display: grid;
-					/* grid-template-columns: 150px 50px; */
-					grid-template-columns: 1fr 1fr 1fr;
-					grid-template-rows: 300px 50px;
-					gap: 40px 10px; 
-					row-gap:30px; column-gap:10px;
-				}
-  			</style>
+			<div class="columns-wrap"></div>
 			
+			<style>
+		      #columns{
+		        column-width:350px;
+		        column-gap: 5px;
+		      }
+		      #columns figure{
+		       
+		        margin:0;
+		        margin-bottom: 5px;
+		        padding:1px;
+		       
+		      }
+		      #columns figure img{
+		        width:100%;
+		      }
+		      #columns figure figcaption{
+		        border-top:1px solid rgba(0,0,0,0.2);
+		        padding:10px;
+		        margin-top:11px;
+		      }
+		    </style>
 			
 			<!-- 가장 많은 입찰 / 오늘의 낙찰 -->
-			<div class="contents max-1500 gridContent" style="border: 0px solid red; height: 700px;">
-				<div class="cont-title" style="margin-top:0px;">
+			<div class="contents max-1500" style="height: 100%;">
+				<div class="cont-title">
 					<h3>오늘의 낙찰</h3>
 					<!-- <a href="#" class="ct-more mo-no"><img src="img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="cns-div">
-				
 					<div class="columns-wrap" id="columns">
 						<!-- <figure class="item">
 							<img src="resources/img/img-1.jpg">
@@ -387,21 +442,179 @@
 								</div>
 							</a>
 						</figure> -->
-					
 					</div>
-					
 				</div>
-				
 		</div>
 		<div class="text-center">
 			<button type="button" class="btn-more" onclick="more_onCilck()"><span>more</span></button>
 		</div>
 		
-		<!-- <jsp:include page="footer.jsp"></jsp:include> --> 
 		
+		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
 
+<!-- 모달검색 -->
+<!-- Modal -->
+<div class="modal fade modal-s" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-sech">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="conts">
+				    <div class="close" data-dismiss="modal" aria-label="Close"></div>
+				</div>
+
+			</div>
+			<div class="modal-body">				
+				<!-- 검색버튼 클릭시 -->
+				<div class="search-show">
+					<div class="sea-box">
+						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						
+						<div class="sea-won">
+							<!-- <div class="select-box">
+								<select>
+									<option>작가명</option>
+								</select>
+							</div> -->
+							<input type="text" class="" />
+							<a href="#"><img src="resources/img/icon-2.jpg" /></a>
+						</div>
+						<div class="ta-h3">
+							<h3 class="sea-h3">작품</h3>
+							<a href="#"><span>more</span></a>
+						</div>
+						<ul class="sea-text">
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+						</ul>
+						<div class="ta-h3">
+							<h3 class="sea-h3">작가</h3>
+							<a href="#"><span>more</span></a>
+						</div>
+						<ul class="sea-text">
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+						</ul>
+						<div class="ta-h3">
+							<h3 class="sea-h3">컨텐츠</h3>
+							<a href="#"><span>more</span></a>
+						</div>
+						<ul class="sea-text">
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+							<li><a href="#">text</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- Modal -->
+<!-- login -->
+<div class="modal fade modal-s" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w480 login-modal">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+				<img src="resources/img/icon/login-logo.png"  class="login-logo"/>
+				<div class="login-box">
+					<p class="lb-p1">LOGIN</p>
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="아이디/이메일" />
+					</div>
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="비밀번호" />
+					</div>
+					<div class="radio-3 rad-mg">
+						<input type="radio" id="r1" name="rr">
+						<label for="r1" class="wd-105"><span></span>자동로그인</label>
+						<input type="radio" id="r2" name="rr">
+						<label for="r2"><span></span>아이디(이메일) / 비밀번호 찾기</label>
+					</div>
+					<div class="bat-box3">
+						<button type="button" class="ba-btn1"><span>Login</span></button>
+					</div>
+					<p class="lb-p2"><a href="#"><span>회원가입</span></a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- 회원가입 -->
+<div class="modal fade modal-s" id="memberModal" tabindex="-1" role="dialog" aria-labelledby="memberModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w800 momber-modal">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body member-body">
+				<img src="resources/img/icon/login-logo.png"  class="member-logo"/>
+				<div class="member-box">
+					<img src="resources/img/icon/icon-bg.png" class="member-icon" />
+					<h3 class="me-h3">회원가입</h3>
+					<h4 class="me-h4">Dealing art  가입을 환영합니다. <span>회원 정보를 입력해 주세요.</span></h4>
+				
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="아이디/이메일" />
+						<p class="inp-p">주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.</p>
+					</div>
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="비밀번호" />
+						<p class="inp-p">
+							영문/숫자/특수문자 2가지 이상 조합 (8~20자)<br/>
+							3개 이상 연속되거나 동일한 문자/숫자 제외, 아이디(이메일) 제외
+						</p>
+					</div>
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="비밀번호 확인" />
+						<p class="inp-p">확인을 위해 새 비밀번호를 다시 입력해주세요.</p>
+					</div>					
+					<div class="input-box">
+						<input type="text" class="input-3" placeholder="이름" />
+					</div>
+					<div class="input-box input-group">
+						<input type="text" class="input-3" placeholder="휴대폰 번호" />
+						<button type="button" class="group-btn">인증하기</button>
+					</div>
+					
+					<div class="me-text">
+						딜링아트 이용 약관에 동의해 주세요. <br/>
+						경매 / 판매 알림 수신을 원하실 경우 모두 동의해 주세요.  <span class="text-line">모두 동의</span>						
+					</div>
+					<div class="radio-3 rad-mg">
+						<input type="checkbox" id="s1" name="rr">
+						<label for="s1"><span></span>(필수) 만 18세 이상입니다.</label><br/>
+						<input type="checkbox" id="s2" name="rr">
+						<label for="s2"><span></span>(필수) 이용 약관</label><br/>
+						<input type="checkbox" id="s3" name="rr">
+						<label for="s3"><span></span>(필수) 개인정보 수집 및 이용 동의</label><br/>
+						<input type="checkbox" id="s4" name="rr">
+						<label for="s4"><span></span>(선택) 이벤트, 프로모션 알림 메일 및 SMS 수신</label>
+					</div>
+					<div class="bat-box3">
+						<button type="button" class="ba-btn1"><span>회원 가입하기</span></button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 <script type="text/javascript">
@@ -431,25 +644,25 @@
 		  });
 		  
 		});
-
+	
 	  var myArray = ["01","02","03","04","05","06","07","08","09"];
-      var swiper = new Swiper(".mySwiper", {
-    	  autoplay: {
-              delay: 3000,
-              disableOnInteraction: false,
-            },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-          renderBullet: function (index, className) {
-            return '<span class="' + className + '">' + myArray[index + 0] + '</span>';
-          },
-        },
-      });
-      
-      
-      
-      $(window).on("resize", function () {
+	  var swiper = new Swiper(".mySwiper", {
+		  autoplay: {
+	          delay: 3000,
+	          disableOnInteraction: false,
+	        },
+	    pagination: {
+	      el: ".swiper-pagination",
+	      clickable: true,
+	      renderBullet: function (index, className) {
+	        return '<span class="' + className + '">' + myArray[index + 0] + '</span>';
+	      },
+	    },
+	  });
+	  
+	  
+	  
+	  $(window).on("resize", function () {
 	   	    if(window.matchMedia('(min-width: 1537px)').matches)
 	   	    {
 	   	    	var swiper = new Swiper(".mySwiper2", {
@@ -467,7 +680,7 @@
 	   	            prevEl: ".swiper-button-prev",
 	   	          },
 	   	        });
-	   	    
+	   	    	
 		   	    document.querySelectorAll(".item").forEach((item) => {
 		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
 		       	  });
@@ -503,8 +716,7 @@
 	   	          },
 	   	     });
 	   	    	
-		  
-	   	    	 document.querySelectorAll(".item").forEach((item) => {
+		   	      document.querySelectorAll(".item").forEach((item) => {
 		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
 		       	  });
 		       	  const wrap = document.querySelector(".columns-wrap");
@@ -553,51 +765,50 @@
 	       	  
 	   	     };
 	   	}).resize();
-      
-      /* 메뉴바 FIXED */
-      if (jQuery(window).width() > 0) {
-          jQuery(window).on("scroll",function(ev){
-              if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
-                  jQuery('.head-wrap').addClass('fixed');
-              }
-              else{
-                  jQuery('.head-wrap').removeClass('fixed');
-              }
-              return false;
-          });
-      }
-      
-      
-      /* jQuery(function($) {
-
-    	    window.onresize = function(){
-    	      document.location.reload();
-    	    };
-
-    	}); */
-      
-      
-      var delay = 300;
-      var timer = null;
-
-      //Javascript
-      window.addEventListener('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
-
-      //jQuery
-      $(window).on('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
-      
-  	function searchMainData(page) {
-  		
+	  
+	  /* 메뉴바 FIXED */
+	  if (jQuery(window).width() > 0) {
+	      jQuery(window).on("scroll",function(ev){
+	          if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
+	              jQuery('.head-wrap').addClass('fixed');
+	          }
+	          else{
+	              jQuery('.head-wrap').removeClass('fixed');
+	          }
+	          return false;
+	      });
+	  }
+	  
+	  
+	  /* jQuery(function($) {
+	
+		    window.onresize = function(){
+		      document.location.reload();
+		    };
+	
+		}); */
+	  
+	  
+	  var delay = 300;
+	  var timer = null;
+	
+	  //Javascript
+	  window.addEventListener('resize', function(){
+	  	clearTimeout(timer);
+	  	timer = setTimeout(function(){
+	  		document.location.reload();
+	  	}, delay);
+	  });
+	
+	  //jQuery
+	  $(window).on('resize', function(){
+	  	clearTimeout(timer);
+	  	timer = setTimeout(function(){
+	  		document.location.reload();
+	  	}, delay);
+	  });
+	  
+		function searchMainData(page) {
 		$.ajax({
 	           type: "post",
 	           url: "main/mainData",
@@ -626,14 +837,12 @@
 	        	   
 	        	   var todayBidHtml = '';
 	        	   for(i=0; i<mainTodayBid.length; i++){
-	        		   var cid = Date.now().toString(36) + Math.random().toString(36).substr(2);
-	        		  
 	        		   todayBidHtml += '<figure class="item">';
-	        		   todayBidHtml += '<img src="'+ mainTodayBid[i].workMainImgUrl +'" id="img_'+cid+'" onmouseover="imageInfo(\''+cid+'\')" style="height: 300px; width:100%;  object-fit: contain">';
+	        		   todayBidHtml += '<img src="'+ mainTodayBid[i].workMainImgUrl +'">';
 	        		   todayBidHtml += '	<a class="hd-div2">';								
 	        		   todayBidHtml += '		<div class="hd-text">';
 	        		   todayBidHtml += '			<h4>'+ mainTodayBid[i].artstActvtyNm +'</h4>';
-	        		   todayBidHtml += '			<div class="hd-tc" id="imgInfo_'+cid+'">';
+	        		   todayBidHtml += '			<div class="hd-tc">';
 	        		   todayBidHtml += '				<div class="hd-d1">'+ mainTodayBid[i].workNm +'('+ mainTodayBid[i].workProdcYear +')';
 	        		   todayBidHtml += '				<br/>'+ mainTodayBid[i].workMatrl +', '+ mainTodayBid[i].workSizeWidth +'x'+ mainHotest[i].workSizeDepth +'x'+ mainHotest[i].workSizeHeight +'</div>';
 	        		   todayBidHtml += '				<div class="hd-d2">낙찰가 '+ formatComma(mainTodayBid[i].dealSbidPrc) +'</div>';
@@ -641,14 +850,8 @@
 	        		   todayBidHtml += '		</div>';
 	        		   todayBidHtml += '	</a>';
 	        		   todayBidHtml += '</figure>';
-	        		  
-	        		 }
-	        	  
-	        	   	$("#columns").append(todayBidHtml).trigger("create");
-	        	  
-	        		
-	        	  
-	        	   
+	        	   }
+	        	   $("#columns").append(todayBidHtml).trigger("create");
 	        	   
 	           },
 	           error: function(error) {
@@ -656,32 +859,16 @@
 	           }
 		})
 	}
-  	
-  	function more_onCilck(){
-  		//debugger;
-  		page += 1;
-  		searchMainData(page);
-  		
-  		/* var gh = $('.gridContent').height();
-  		
-  		$('.gridContent').height(gh+700); */
-  		
-  	}
 	
-  	function imageInfo(i) {
-  		
-  		var imgId = "img_"+i; 
-  		var w = $("#" + imgId).width();//width 구하기 
-  		var h = $("#" + imgId).height();//height 구하기 
-
-  		var imgInfo = "imgInfo_"+i;
-  		 $('#'+imgInfo).width(w);
-         $('#'+imgInfo).height(h-50);
+	function more_onCilck(){
+		debugger;
+		page += 1;
+		searchMainData(page);
 	}
-  	
-  	
-      
-    </script>
+</script>
+    
+	
+	
 	
 	
 </body>
