--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -71,7 +71,19 @@
 				
 			</div>
 		</div>
-		
+		<div class="bab-bo">
+			<div class="ta-sho">
+				<a href="#"><span>Guide</span></a>
+			</div>
+			<div class="mab-rb">
+				<a href="#" class="mab-a"><span>Guide</span></a>
+				<ul class="mab-ul">
+					<li><a href="#"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li>
+					<li><a href="#"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
+					<li><a href="#"><img src="resources/img/icon-6.png" /> <span>작품등록</span></a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 		
 <!-- 모달검색 -->
@@ -240,7 +252,7 @@
 	</div>
 	
 	</form>
-</div>s
+</div>
 
 <div class="modal fade modal-s" id="ModalAlert" tabindex="-1" role="dialog" aria-labelledby="myModal3Label" aria-hidden="true"></div>
 
